Fixing tables on small devices

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -21,9 +21,10 @@
   margin-bottom: 4em;
 }
 
+// Grade box
 .ui.centered.inverted.card {
   .ui.header {
-    font-size: 4.4em;
+    font-size: 4em;
   }
 }
 .header.item {
